--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 
     <body
         class="home page-template page-template-template-home page-template-template-home-php page page-id-21 wp-custom-logo">
-        <!-- <div class="bar">
+        <div class="bar">
             <span class="bar_content">
                 Discover dental aesthetics: fixed teeth, no implants. Embrace confidence with a complete, lasting smile. Join us!
             </span>
-        </div> -->
+        </div>
         <header class="ab-header" id="ab-header">
             <div class="header-container ">
                 <div class="ab-header-wrapper ">
