--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         class="home page-template page-template-template-home page-template-template-home-php page page-id-21 wp-custom-logo">
         <div class="bar">
             <span class="bar_content">
-                Discover dental aesthetics: fixed teeth, no implants. Embrace confidence with a complete, lasting smile. Join us!
+                Discover dental aesthetics: fixed teeth, no implants. Embrace confidence with a complete, lasting smile.
+                Join us!
             </span>
         </div>
         <header class="ab-header" id="ab-header">
@@ -186,8 +187,7 @@
                             class="home4-bg1">
                         <div class="three-column">
                             <div class="home4-item">
-                                <img src="./images/pregnancy.png"
-                                    alt="" loading="lazy" style="max-width: 70px;">
+                                <img src="./images/pregnancy.png" alt="" loading="lazy" style="max-width: 70px;">
                                 <p class="mt-2 text-heading4 text-bold">Reliable Pregnancy Delivery
                                 </p>
                                 <p class="text-body sp-top" style="--spacer:0.5;">We provide standard pregnancy delivery
@@ -197,8 +197,7 @@
                                 </p>
                             </div>
                             <div class="home4-item">
-                                <img src="./images//perfect-teeth.png"
-                                    alt="" loading="lazy">
+                                <img src="./images//perfect-teeth.png" alt="" loading="lazy">
                                 <p class="mt-2 text-heading4 text-bold">Tooth Perfection
                                 </p>
                                 <p class="text-body sp-top" style="--spacer:0.5;">Experience the future of dental
@@ -260,6 +259,42 @@
                             Matchless <br>
                             Services <br>Since 2012
 
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="home3 my-6" id="about">
+                <div class="ab-container two-column">
+                    <div class="col1">
+                        <img src="./images/5.jpeg" style="border-radius: 10px;" alt="">
+                    </div>
+                    <div class="col2">
+                        <p class="text-heading2 text-bold text-dark">Dr. Pranay Thakkar</p>
+                        <p class="text-body mt-2">Dr. Pranay Thakkar is an esteemed dental surgeon practicing
+                            for 11
+                            years in Surat. Vraj Dentalcare, comprising branches in Althan, Athwalines, and Nanpura,
+                            offers a wide spectrum of teeth treatments. Experience innovative fixed teeth solutions sans
+                            implants, enhancing your smile's allure and durability. Moreover, benefit from our exclusive
+                            dental insurance coverage, unparalleled in the industry. Elevate your dental journey with
+                            us.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="home3 my-5" id="about">
+                <div class="ab-container two-column">
+                    <div class="col1 order-md-2">
+                        <img src="./images/3.jpeg" style="border-radius: 10px;" alt="">
+                    </div>
+                    <div class="col2 order-md-1">
+                        <p class="text-heading2 text-bold text-dark">Dr. Saniya Goel Thakkar</p>
+                        <p class="text-body mt-1 mb-0">Dr. Saniya Goel Thakkar is a dedicated gynecologist with a
+                            decade's
+                            experience, holds an MBBS from New Civil Hospital Amritsar and an MS in Gynecology from New
+                            Civil Hospital Surat.She excels in diverse laparoscopic surgeries and infertility
+                            treatments at Vraj Hospital. Notably, for planned pregnancies that deviate from normal
+                            delivery, charges remain equivalent to a regular delivery, reflecting her patient-centric
+                            approach.
                         </p>
                     </div>
                 </div>
