remove noindex meta tag and extra files

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Vraj Hospital</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-    <title>Vraj Hospital</title>
-    <meta name='robots' content='noindex, nofollow' />
+    <link rel="stylesheet" href="./css/gcs.css">
+    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/trustindex-google-widget.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="./plugins/sweetalert2/sweetalert2.all.min.js"></script>
     <style>
         img.wp-smiley,
         img.emoji {
@@ -26,14 +32,6 @@
             padding: 0 !important;
         }
     </style>
-
-    <link rel="stylesheet" href="./css/gcs.css">
-    <link rel="stylesheet" href="./css/media.css">
-    <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="./css/trustindex-google-widget.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="./plugins/sweetalert2/sweetalert2.all.min.js"></script>
 
     <!-- Meta Pixel Code -->
     <script>
@@ -75,14 +73,14 @@
         <header class="ab-header" id="ab-header">
             <div class="header-container ">
                 <div class="ab-header-wrapper ">
-                    <a class="ab-brand " href="/index.html">
+                    <a class="ab-brand " href="/index">
                         <img src="./images/vraj-hospital-logo.png" alt="" class="ab-logo">
                     </a>
                     <div class="menu-menu-1-container">
                         <ul id="menu-menu-1" class="ab-nav-menu">
                             <li id="menu-item-383"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-383">
-                                <a href="/index.html" aria-current="page">Home</a>
+                                <a href="/index" aria-current="page">Home</a>
                             </li>
                             <li id="menu-item-384"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384">
@@ -328,7 +326,7 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
                                 <li class="glide__slide">
-                                    <a href="./gynaecology.html" target="_blank">
+                                    <a href="./gynaecology" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/gynaecology.jpg" alt="">
                                             <a class="content" href="">
@@ -338,7 +336,7 @@
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./dental.html" target="_blank">
+                                    <a href="./dental" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/Dental.png" alt="">
                                             <a class="content" href="">
@@ -348,7 +346,7 @@
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./physiotherapy.html" target="_blank">
+                                    <a href="./physiotherapy" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/Physiotherapy.jpg" alt="">
                                             <a class="content" href="">
@@ -358,7 +356,7 @@
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./dietitian.html" target="_blank">
+                                    <a href="./dietitian" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/dietitian.jpg" alt="">
                                             <a class="content" href="">
@@ -857,8 +855,8 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;"
-                            href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
+                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency"
+                            target="_blank"> FITIT
                             Official</a>
                     </p>
                 </div>
