--- a/physiotherapy.html
+++ b/physiotherapy.html
@@ -4,13 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Vraj Hospital | Physiotherapy</title>
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
-    <title>Vraj Hospital | Physiotherapy</title>
-    <meta name='robots' content='noindex, nofollow' />
+    <link rel="stylesheet" href="./css/gcs.css">
+    <link rel="stylesheet" href="./css/media.css">
+    <link rel="stylesheet" href="./css/trustindex-google-widget.css">
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="./plugins/sweetalert2/sweetalert2.all.min.js"></script>
     <style>
         img.wp-smiley,
         img.emoji {
@@ -25,14 +30,6 @@
             padding: 0 !important;
         }
     </style>
-
-    <link rel="stylesheet" href="./css/gcs.css">
-    <link rel="stylesheet" href="./css/media.css">
-    <link rel="stylesheet" href="./css/trustindex-google-widget.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="./plugins/sweetalert2/sweetalert2.all.min.js"></script>
-
     <!-- Meta Pixel Code -->
     <script>
         !function (f, b, e, v, n, t, s) {
@@ -66,14 +63,14 @@
     <header class="ab-header" id="ab-header">
         <div class="header-container ">
             <div class="ab-header-wrapper ">
-                <a class="ab-brand " href="/index.html">
+                <a class="ab-brand " href="/index">
                     <img src="./images/vraj-hospital-logo.png" alt="" class="ab-logo">
                 </a>
                 <div class="menu-menu-1-container">
                     <ul id="menu-menu-1" class="ab-nav-menu">
                         <li id="menu-item-383"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-383">
-                            <a href="./index.html">Home</a>
+                            <a href="./index">Home</a>
                         </li>
                         <li id="menu-item-384"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384">
@@ -203,27 +200,27 @@
                         </div>
 
                         <li>
-                            <a href="index.html" class="gallery1-item">
+                            <a href="index" class="gallery1-item">
                                 Home </a>
                         </li>
 
                         <li>
-                            <a href="./gynaecology.html" class="gallery1-item">
+                            <a href="./gynaecology" class="gallery1-item">
                                 Gynaecology </a>
                         </li>
 
                         <li>
-                            <a href="./dental.html" class="gallery1-item">
+                            <a href="./dental" class="gallery1-item">
                                 Dental </a>
                         </li>
 
                         <li>
-                            <a href="./physiotherapy.html" class="gallery1-item">
+                            <a href="./physiotherapy" class="gallery1-item">
                                 Physiotherapy </a>
                         </li>
 
                         <li>
-                            <a href="./dietitian.html" class="gallery1-item">
+                            <a href="./dietitian" class="gallery1-item">
                                 Dietitian </a>
                         </li>
                     </ul>
@@ -307,8 +304,8 @@
             <div class="ab-container two-column">
                 <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                 <p>
-                    Designed by <a style="color: #387DFF;"
-                        href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
+                    Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency"
+                        target="_blank"> FITIT
                         Official</a>
                 </p>
             </div>
