--- a/gynaecology.html
+++ b/gynaecology.html
@@ -64,30 +64,30 @@
         <header class="ab-header" id="ab-header">
             <div class="header-container ">
                 <div class="ab-header-wrapper ">
-                    <a class="ab-brand " href="/index">
+                    <a class="ab-brand " href="/index.html">
                         <img src="./images/vraj-hospital-logo.png" alt="" class="ab-logo">
                     </a>
                     <div class="menu-menu-1-container">
                         <ul id="menu-menu-1" class="ab-nav-menu">
                             <li id="menu-item-383"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-383">
-                                <a href="/index" aria-current="page">Home</a>
+                                <a href="/index.html" aria-current="page">Home</a>
                             </li>
                             <li id="menu-item-384"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384">
-                                <a href="#about">About</a>
+                                <a href="/index.html">About</a>
                             </li>
                             <li id="menu-item-403"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-403">
-                                <a href="#facilities">Facilities</a>
+                                <a href="/index.html">Facilities</a>
                             </li>
                             <li id="menu-item-402"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-402">
-                                <a href="#doctor">Team Member</a>
+                                <a href="/index.html">Team Member</a>
                             </li>
                             <li id="menu-item-385"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-385">
-                                <a href="#contact">Contact</a>
+                                <a href="/index.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -197,27 +197,27 @@
                             </div>
 
                             <li>
-                                <a href="index" class="gallery1-item">
+                                <a href="index.html" class="gallery1-item">
                                     Home </a>
                             </li>
 
                             <li>
-                                <a href="./gynaecology" class="gallery1-item">
+                                <a href="./gynaecology.html" class="gallery1-item">
                                     Gynaecology </a>
                             </li>
 
                             <li>
-                                <a href="./dental" class="gallery1-item">
+                                <a href="./dental.html" class="gallery1-item">
                                     Dental </a>
                             </li>
 
                             <li>
-                                <a href="./physiotherapy" class="gallery1-item">
+                                <a href="./physiotherapy.html" class="gallery1-item">
                                     Physiotherapy </a>
                             </li>
 
                             <li>
-                                <a href="./dietitian" class="gallery1-item">
+                                <a href="./dietitian.html" class="gallery1-item">
                                     Dietitian </a>
                             </li>
                         </ul>
@@ -304,7 +304,7 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency"
+                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
                             target="_blank"> FITIT
                             Official</a>
                     </p>
