--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vraj Hospital</title>
+    <title>Vraj Hospital | Best Dental Care & Women's Care in Surat</title>
+    <meta name="description" content=": Discover exceptional healthcare at Vraj Hospital - Your trusted destination for advanced medical services, compassionate care, and cutting-edge treatments.
+    Experience the pinnacle of wellness with our dedicated team of experts">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
@@ -73,14 +75,14 @@
         <header class="ab-header" id="ab-header">
             <div class="header-container ">
                 <div class="ab-header-wrapper ">
-                    <a class="ab-brand " href="/index">
+                    <a class="ab-brand " href="/index.html.html">
                         <img src="./images/vraj-hospital-logo.png" alt="" class="ab-logo">
                     </a>
                     <div class="menu-menu-1-container">
                         <ul id="menu-menu-1" class="ab-nav-menu">
                             <li id="menu-item-383"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-383">
-                                <a href="/index" aria-current="page">Home</a>
+                                <a href="/index.html.html" aria-current="page">Home</a>
                             </li>
                             <li id="menu-item-384"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384">
@@ -192,8 +194,7 @@
                             of
                             life.
                         </p>
-                        <a href="" class="btn btn-primary mt-2">More About
-                        </a>
+
                     </div>
                 </div>
             </section>
@@ -326,40 +327,40 @@
                         <div class="glide__track" data-glide-el="track">
                             <ul class="glide__slides">
                                 <li class="glide__slide">
-                                    <a href="./gynaecology" target="_blank">
+                                    <a href="/gynaecology.html" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/gynaecology.jpg" alt="">
-                                            <a class="content" href="">
+                                            <a class="content" href="/gynaecology.html">
                                                 <p class="text-body text-white">Gynaecology</p>
                                             </a>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./dental" target="_blank">
+                                    <a href="/dental.html" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/Dental.png" alt="">
-                                            <a class="content" href="">
+                                            <a class="content" href="/gynaecology.html">
                                                 <p class="text-body text-white"> Dental </p>
                                             </a>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./physiotherapy" target="_blank">
+                                    <a href="/physiotherapy.html" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/Physiotherapy.jpg" alt="">
-                                            <a class="content" href="">
+                                            <a class="content" href="/gynaecology.html">
                                                 <p class="text-body text-white">Physiotherapy </p>
                                             </a>
                                         </div>
                                     </a>
                                 </li>
                                 <li class="glide__slide">
-                                    <a href="./dietitian" target="_blank">
+                                    <a href="/dietitian.html" target="_blank">
                                         <div class="svs-item">
                                             <img class="svs-item-img" src="./images/dietitian.jpg" alt="">
-                                            <a class="content" href="">
+                                            <a class="content" href="/gynaecology.html">
                                                 <p class="text-body text-white">Dietitian </p>
                                             </a>
                                         </div>
@@ -368,7 +369,7 @@
                                 <li class="glide__slide">
                                     <div class="svs-item">
                                         <img class="svs-item-img" src="./images/cantine.png" alt="">
-                                        <a class="content" href="">
+                                        <a class="content" >
                                             <p class="text-body text-white">Our Canteen </p>
                                         </a>
                                     </div>
@@ -762,10 +763,10 @@
                 </div>
             </div>
         </section> -->
-            <section>
+            <section id="contact">
                 <div class="form-main">
                     <div class="main-wrapper">
-                        <h2 class="form-head">Contact From</h2>
+                        <h1 class="form-head">Contact From</h1>
                         <form class="form-wrapper" onsubmit="return sendMail()">
                             <div class="form-card">
                                 <input class="form-input" id="Name" type="text" name="full_name" required="required" />
@@ -855,7 +856,7 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency"
+                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
                             target="_blank"> FITIT
                             Official</a>
                     </p>
