--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         <header class="ab-header" id="ab-header">
             <div class="header-container ">
                 <div class="ab-header-wrapper ">
-                    <a class="ab-brand " href="/index.html.html">
+                    <a class="ab-brand " href="/index.html">
                         <img src="./images/vraj-hospital-logo.png" alt="" class="ab-logo">
                     </a>
                     <div class="menu-menu-1-container">
                         <ul id="menu-menu-1" class="ab-nav-menu">
                             <li id="menu-item-383"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-383">
-                                <a href="/index.html.html" aria-current="page">Home</a>
+                                <a href="/index.html" aria-current="page">Home</a>
                             </li>
                             <li id="menu-item-384"
                                 class="menu-item menu-item-type-post_type menu-item-object-page menu-item-384">
