--- a/dental.html
+++ b/dental.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vraj Hospital | Dental</title>
+    <title>Top-Quality Dental Care at Vraj Hospital: Your Smile's Best Friend
+    </title>
+    <meta name="description" content="Experience comprehensive dental services at Vraj Hospital's Dental Department. From preventive to cosmetic dentistry, we prioritize your oral health and comfort.
+    ">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
