--- a/dietitian.html
+++ b/dietitian.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vraj Hospital | Dietitian</title>
+    <title>Expert Dietitians for Personalized Nutrition Plans
+    </title>
+    <meta name="description" content="Get expert guidance from Vraj Hospital's dietitians. Tailored nutrition plans for health, weight management, medical conditions, and sports nutrition.
+    ">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -299,8 +302,8 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
-                            target="_blank"> FITIT
+                        Designed by <a style="color: #387DFF;"
+                            href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
                             Official</a>
                     </p>
                 </div>
