--- a/physiotherapy.html
+++ b/physiotherapy.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Vraj Hospital | Physiotherapy</title>
+    <title>Expert Physiotherapy Services for Optimal Mobility | Vraj Hospital</title>
+    <meta name="description" content="Experience tailored physiotherapy at Vraj Hospital. Our skilled team addresses musculoskeletal, neurological, & cardiorespiratory conditions. Start your journey to better health today
+    ">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -304,8 +306,8 @@
             <div class="ab-container two-column">
                 <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                 <p>
-                    Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
-                        target="_blank"> FITIT
+                    Designed by <a style="color: #387DFF;"
+                        href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
                         Official</a>
                 </p>
             </div>
