--- a/gynaecology.html
+++ b/gynaecology.html
@@ -3,7 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vraj Hospital | Gynaecology</title>
+    <title> Comprehensive Gynecology Care at Vraj Hospital
+    </title>
+    <meta name="description"
+        content="Expert gynecology services for women's health needs. Compassionate care, family planning, surgeries & more. Your partner in wellness. Contact us now!">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="profile" href="https://gmpg.org/xfn/11">
     <link rel="icon" href="./images/vraj-hospital-logo.png">
@@ -304,8 +307,8 @@
                 <div class="ab-container two-column">
                     <p>© 2023 Vraj Hospital, All Rights Reserved.</p>
                     <p>
-                        Designed by <a style="color: #387DFF;" href="https://gcsconsultant.com/digital-marketing-agency.html"
-                            target="_blank"> FITIT
+                        Designed by <a style="color: #387DFF;"
+                            href="https://gcsconsultant.com/digital-marketing-agency.html" target="_blank"> FITIT
                             Official</a>
                     </p>
                 </div>
