--- a/dental.html
+++ b/dental.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Top-Quality Dental Care at Vraj Hospital: Your Smile's Best Friend
+    <title>Top-Quality Dental Care at Vraj Hospital
     </title>
     <meta name="description" content="Experience comprehensive dental services at Vraj Hospital's Dental Department. From preventive to cosmetic dentistry, we prioritize your oral health and comfort.
     ">
