--- a/physiotherapy.html
+++ b/physiotherapy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Expert Physiotherapy Services for Optimal Mobility | Vraj Hospital</title>
+    <title> Expert Physiotherapy Services | Vraj Hospital</title>
     <meta name="description" content="Experience tailored physiotherapy at Vraj Hospital. Our skilled team addresses musculoskeletal, neurological, & cardiorespiratory conditions. Start your journey to better health today
     ">
     <link rel="profile" href="https://gmpg.org/xfn/11">
